# scrape-bakcend

./: README.md  pyproject.toml
.trae/: dependancies  steps
.trae/rules/: project_rules.md
src/backend/: __init__.py  crew.py  main.py
src/backend/config/: agents.yaml  tasks.yaml
src/backend/tools/: __init__.py  processor_tool.py  query_tool.py  scraper_tool.py
